--- a/src/components/list-generic/styled.css
+++ b/src/components/list-generic/styled.css
@@ -1,6 +1,6 @@
 .table {
     width: 70%;
-
+    height: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -20,6 +20,7 @@
 
 .table ul li {
     width: calc(100% - 24px);
+    height: 40px;
     background-color: var(--gray-secundary);
     margin: 0px;
     border-radius: 30px;
@@ -30,7 +31,7 @@
 }
 
 .table ul li p {
-    size: 17px;
+    size: 15px;
     color: var(--text-card);
 }
 
